<resources>

    <string name="app_name" translatable="false">Pony OC: Pony Avatar Maker</string>


    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="settings">Setting</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="next">Next</string>
    <string name="language">Language</string>


    <string name="title_1">Cat Maker</string>
    <string name="title_2">Cat Emoji Custom</string>
    <string name="title_3">Variety Items </string>

    <string name="permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="continue_per">Continue</string>
    <string name="notification">Notification</string>
    <string name="no_internet">No Internet</string>
    <string name="granted_notification">Notification permission granted</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="allow">Allow</string>
    <string name="to_access">to access photos on your device</string>
    <string name="to_access_13">to access notification on your device</string>

    <string name="rate_us">Rate us</string>
    <string name="share_app">Share app</string>
    <string name="privacy_policy"><![CDATA[Privacy & policy]]></string>

    <string name="zero_star_title">Do you like the app?</string>
    <string name="zero_star">Let us know your experience</string>

    <string name="one_star_title">Oh, no!</string>
    <string name="one_star">Please give us some feedback</string>

    <string name="two_star_title">Oh, no!</string>
    <string name="two_star">Please give us some feedback</string>

    <string name="three_star_title">Oh, no!</string>
    <string name="three_star">Please give us some feedback</string>

    <string name="four_star_title">We love you too!</string>
    <string name="four_star">Thanks for your feedback</string>

    <string name="five_star_title">We love you too!</string>
    <string name="five_star">Thanks for your feedback</string>

    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="have_rated">Thank you for rate our app</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="wait_a_minute">Wait a minute</string>
    <string name="reset">Reset</string>
    <string name="download_success">Download successful to the Pony OC: Pony Avatar Maker album</string>
    <string name="please_check_your_internet">Please check your internet</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="error">Error</string>
    <string name="an_error_occurred">An error occurred, please try again later.</string>
    <string name="image_has_been_saved_successfully">The project has been saved successfully!</string>
    <string name="save">Save</string>
    <string name="are_you_sure_want_to_delete_this_item">Do you want to delete?</string>
    <string name="downloading">Downloading...</string>
    <string name="successfully">Successfully</string>
    <string name="download_failed_please_try_again_later">Download failed, please try again later!</string>
    <string name="save_failed_please_try_again">Save failed, please try again!</string>
    <string name="delete_failed_please_try_again">Delete failed, please try again!</string>
    <string name="my_creation">My Creation</string>
    <string name="delete_your_customize">Delete your customize</string>
    <string name="are_you_sure_you_want_to_delete_the_image">Are you sure you want to delete the image?</string>
    <string name="haven_t_saved_it_yet_do_you_want_to_exit">Haven’t saved it yet, are you sure to exit?</string>
    <string name="change_your_whole_design_are_you_sure">Do you want to reset?</string>
    <string name="character_maker">Pixel Maker</string>
    <string name="no_item_here">No current</string>
    <string name="quick_maker">Quick Maker</string>
    <string name="my_character">My Pixel</string>
    <string name="category">Pixel Maker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_item_current">No current history</string>
    <string name="add_to_whatsapp">Add To WhatsApp</string>
    <string name="add_to_telegram">Add To Telegram</string>
    <string name="my_avatar">My Avatar</string>
    <string name="my_design">My Design</string>
    <string name="my_emoji">My Emoji</string>
    <string name="my_album">My album</string>
    <string name="no_app_found_to_handle_this_action">No app found to handle this action</string>
    <string name="invalid_action_msg">Application not installed</string>
    <string name="invalid_action">Error</string>
    <string name="limit_3_items">At least 3 items are required to create a sticker</string>
    <string name="limit_30_items">Only a maximum of 30 items can be added</string>
    <string name="create_package_name">Create Package Name</string>
    <string name="enter_your_package_name">Enter your package name</string>
    <string name="please_enter_your_package_name">Please enter your package name!</string>
    <string name="background">Background</string>
    <string name="image">Image</string>
    <string name="color">Color</string>
    <string name="add_image">Add Image</string>
    <string name="sticker">Sticker</string>
    <string name="speech_bubbles">Speech Bubbles</string>
    <string name="text">Text</string>
    <string name="type_your_content">Type your content...</string>
    <string name="font">Font</string>
    <string name="choose_color">Choose Color</string>
    <string name="done">Done</string>
    <string name="null_edt">Please enter text</string>
    <string name="input_text">Input text</string>
    <string name="hello_world">Type your content...</string>
    <string name="no_item_desgin">No current history</string>
    <string name="my_character_in">My Work</string>
    <string name="quick_maker_in">Quick mix</string>
    <string name="exit_add">Exit your background</string>
    <string name="exit_bg">Exit your background</string>
    <string name="loading">Loading</string>
    <string name="internet_required_for_more_characters">Internet required for more characters</string>
    <string name="music">Music</string>
    <string name="my_work">My Work</string>
    <string name="pony_maker">Pony Maker</string>
    <string name="trending">Trending Custom</string>
    <string name="my_pony">My Pony</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="please_select_item">Please select an item</string>
    <string name="layer">Layer</string>
    <string name="title_11">Cat Maker</string>
    <string name="title_22">Cat Emoji Custom</string>
    <string name="cat_sticker">Cat Sticker</string>
    <string name="cat_emoji_maker">Cat Emoji Maker</string>
    <string name="cat_maker">Cat Maker</string>
    <string name="emoji_maker">Emoji Maker</string>
    <string name="cat_emoji_customizer">Cat Emoji Custom</string>
    <string name="selected_count">%d selected</string>
    <string name="select_stickers">Select stickers</string>
    <string name="please_select_stickers">Please select stickers</string>
    <string name="please_draw_something">Please draw something</string>
    <string name="please_enter_text">Please enter text</string>
    <string name="mode">Mode:</string>
    <string name="pen">Pen</string>
    <string name="eraser">Eraser</string>
    <string name="cancel">Cancel</string>
    <string name="size">Size:</string>
    <string name="draw">Draw</string>
    <string name="my_emoji_maker">My Emoji Maker</string>
    <string name="my_emoji_custom">My Emoji Custom</string>
    <string name="emoji_cat">Emoji Cat</string>
    <string name="cat_maker_1">Cat maker</string>
    <string name="emoji_cat_1">Emoji cat</string>
    <string name="cat_emoji_sticker">Cat Emoji Sticker</string>
</resources>